# waluigi

./: Makefile  Readme.md  pyproject.toml
examples/: polars_pipeline.py
examples/cc/: html_extractor.py  langfilter.py  pipeline.py  prefilter.py  warc_with_meta.py
examples/dask/: test.py
examples/slurm/: README.md  executor.py  state_target.py  task.py  worker.py
src/waluigi/: bundle.py  errors.py  graph.py  resources.py  runner.py  target.py  task.py
test/: test_dag.py
