[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waluigi"
requires-python =">=3.10"
version = "0.0.1"

dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"test/test_cycles.py" = ["E402"]
